Revision history for Weather::Meteo

0.07
	Fix http://www.cpantesters.org/cpan/report/b25e6af8-0ce4-11ee-8f82-220d6e8775ea

0.06	Thu Jun 15 20:49:00 EDT 2023
	Added bin/weather
	weather() now supports the 'tz' argument

0.05	Fri Apr 14 09:55:47 EDT 2023
	Include the daily overview in the results
	The database is from 1940

0.04	Tue Mar 21 21:49:03 EDT 2023
	Support Geo::Location::Point object to give a location

0.03	Fri Mar 10 09:35:01 EST 2023
	Remove unused modules
	Look into http://www.cpantesters.org/cpan/report/8b5bb156-bd91-11ed-aba6-9a79f339625c
	Fix https://github.com/nigelhorne/Weather-Meteo/issues/1 (SREZIC)

0.02	Tue Feb 28 11:57:35 EST 2023
	Remove references left from the template code
	Added all my basic testing

0.01	Tue Feb 28 11:16:18 EST 2023
        First draft